# app/Http/Resources/PostResource.php
@@ -5,8 +5,29 @@ namespace App\Http\Resources;
 use Illuminate\Http\Resources\Json\JsonResource;
 use Illuminate\Support\Carbon;
 
+/**
+ * @OA\Schema(
+ *     title="PostResource",
+ *     description="Post resource",
+ *     @OA\Xml(
+ *         name="PostResource"
+ *     )
+ * )
+ */
+
 class PostResource extends JsonResource
 {
+
+    /**
+     * @OA\Property(
+     *     title="Data",
+     *     description="Data wrapper"
+     * )
+     *
+     * @var \App\Models\Post[]
+     */
+    private $data;
+
     /**
      * Transform the resource into an array.
      *
@@ -22,7 +43,8 @@ class PostResource extends JsonResource
             'body' => $this->body,
             'created_at' => Carbon::parse($this->created_at)->format('Y-m-d H:i:s'),
             'updated_at' => Carbon::parse($this->updated_at)->format('Y-m-d H:i:s'),
-            'author' => $this->user
+            'user_id' => $this->user_id,
+            'author' => new UserResource($this->user)
         ];
     }
 }
